--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,28 @@
 // Navigation code here
+.nav-area{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+
+    .site-name{
+        margin:3% 0 2% 0;
+
+        h1{
+            font-size:3.6rem;
+        }
+    }
+    .nav-links{
+            margin:0 0 2% 0;
+            width:45%;
+            display:flex;
+            justify-content:space-between;
+
+        a{
+            text-decoration:none;
+            font-family: 'Ubuntu', sans-serif;
+            color: @header-font-color;
+            font-size:1.6rem;
+            font-weight:bold;
+        }
+    }
+}
