--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,6 +5,7 @@
   .intro {
     img{
       border-radius:5px;
+      width:100%;
     }
     h2 {
       padding: 15px;
@@ -20,17 +21,41 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    .blast{
+      @media @phone{
+        width:100%;
+        margin:20px 5%;
+      }
+    }
+    .sky{
+      @media @phone{
+        display:none;
+      }
+      
+    }
+    .launch{
+      @media @phone{
+        display:none;
+      }
+     
+    }
+    
 
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
     }
   }
 
   .visit-planets {
     padding: 15px;
+
+    @media @phone{
+      padding:0 15px;
+    }
 
     h3 {
       margin-top: 11px;
@@ -48,8 +73,18 @@
     display: flex;
     justify-content: center;
 
+    @media @phone{
+      flex-wrap:wrap;
+      margin-top:40px;
+      padding:20px 4%;
+    }
+
     .walk-text {
       width: 50%;
+      
+      @media @phone{
+        width:100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -60,12 +95,31 @@
       }
 
       .btn {
+        .sign-up-btn(@btn-bg-color, white, 1.9rem, 30%);
+
+        @media @phone{
+          width:100%;
+          padding:5% 0;
+        }
+
+        &:hover{
+          color:@btn-bg-color;
+          background-color:white;
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone{
+        order:-1;
+        width:100%;
+        margin-left:0;
+        margin-bottom:4%;
+        
+      }
       
       img {
         width: 100%;
