--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,24 @@
 // Mixins Here
+.flex-set(){
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+}
+.a-links(){
+    text-decoration:none;
+    font-family: 'Ubuntu', sans-serif;
+    color: @nav-font;
+    font-size:1.6rem;
+    font-weight:bold;
+}
+
+.sign-up-btn(@bgcolor, @fontcolor, @fontsize, @width){
+    background-color:@bgcolor;
+    color:@fontcolor;
+    font-family: 'Ubuntu', sans-serif;
+    font-size:@fontsize;
+    width:@width;
+    padding:2% 0;
+    text-align:center;
+    border-radius:4px;
+}
