--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,28 +1,38 @@
 // Navigation code here
-.nav-area{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
+.main-nav-wrapper{
+    width:100%;
+    background-color:@nav-bg;
+    margin-top:1%;
+    border-bottom:2px solid @nav-border;
 
-    .site-name{
-        margin:3% 0 2% 0;
-
-        h1{
-            font-size:3.6rem;
-        }
+    @media @phone{
+        margin-top:3%;
     }
-    .nav-links{
-            margin:0 0 2% 0;
-            width:45%;
-            display:flex;
-            justify-content:space-between;
 
-        a{
-            text-decoration:none;
-            font-family: 'Ubuntu', sans-serif;
-            color: @header-font-color;
-            font-size:1.6rem;
-            font-weight:bold;
+    .nav-area{
+    
+        .flex-set();
+
+        .site-name{
+            margin:2% 0 2% 0;
+    
+            h1{
+                font-size:3.6rem;
+            }
+        }
+        .nav-links{
+                margin:0 0 2% 0;
+                width:45%;
+                display:flex;
+                justify-content:space-between;
+
+                @media @phone{
+                    width:70%;
+                }
+    
+            a{
+                .a-links();
+            }
         }
     }
 }
